# aricanduva

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  mise.toml
.github/workflows/: docker.yaml  release.yaml
.sqlx/: query-03c076800f417576a9ad60bd9016339ddacc8015817b2e2f7a0e51e74aedf1c9.json  query-6c06f016e315c4e1e39089cae0fc5c00573a0e1a9e7da9803826d2122d70b1b6.json  query-926ead4a9f37b923c2805457f9c01917f371c44d599650f001d404f7e7aa1155.json  query-c98b8f89441e72838ba3e22742d9ce6ba4c7aff19c4c835ea29cb8fe3f03c1b3.json  query-e95ba9f1bc91a41ba6810703e73311ec3ae09d6d8562a0654783b720eed4bc23.json  query-f3304535ae8ffbdeaec988cd17f42eefb6d89792448309816b8a787c9f792699.json
docs/: integrations.md
examples/: README.md  docker-compose.yaml
examples/minio-sdk-tester/: go.mod  go.sum  main.go
migrations/: 0001_init.sql
src/: cli.rs  database.rs  info.rs  ipfs.rs  limited_slots.rs  main.rs
src/s3/: authorization.rs  delete_object.rs  get_bucket.rs  get_object.rs  head_object.rs  mod.rs  post_bucket.rs  post_object.rs  put_object.rs
