[package]
name = "aricanduva"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json", "macros"] }
tokio = { version = "1.35.0", features = ["full"] }
hyper = "1.0.0"
listenfd = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
# ipfs-api-backend-hyper = { path = "../rust-ipfs-api/ipfs-api-backend-hyper", features = ["with-send-sync", "with-hyper-rustls"] }
ipfs-api-backend-hyper = { git = "https://github.com/bltavares/rust-ipfs-api", branch = "fixes", features = ["with-send-sync", "with-hyper-rustls"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
conf = "0.4"
futures = "0.3"
http = "1.0.0"
thiserror = "2.0"
axum-extra = { version = "0.12.5", features = ["middleware", "typed-header"] }
tower-http = { version = "0.6.8", features = ["trace", "compression-br", "compression-gzip", "compression-deflate", "cors", "normalize-path"] }
typed-path = "0.12.2"
bytes = "1.11"
mime_guess = "2.0.5"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
axum-client-ip = "1.3.1"
ipnet = { version = "2.11.0", features = ["serde"] }
iprfc = "0.2.0" # remove if ip.is_global is ever stabilized in std
tower-layer = "0.3.3"
tower-service = "0.3.3"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.9.2"
url = "2.5.4"  
percent-encoding = "2.3.1"
dashmap = "6.1.0"
itertools = "0.14.0"
serde_with = "3.16.1"
quick-xml = { version = "0.39.0", features = ["serialize"] }

# Used with cargo-run-bin
[package.metadata.bin]
cargo-binstall = { version = "1.17.4" }
watchexec-cli = { version = "2.3.3", bins = ["watchexec"] }
# sqlx-cli = { version = "0.8.6", bins = ["cargo-sqlx"] } # cargo-bininstall --intall-path issue when building from source
systemfd = { version = "0.4.6" }
